<resources>
    <string name="app_name">News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="latest">Latest</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="latest_news">Latest news</string>
    <string name="business_news">Business news</string>
    <string name="science_news">Science news</string>
    <string name="sports_news">Sports news</string>
    <string name="tech_news">Technology news</string>
    <string name="no_articles_saved_yet">No articles saved yet.</string>
</resources>
